[FEATURE] Add game header for game page #4 (#21)
* Add image assets to project for game header

* Add GameHeader component

* Add styling file for GameHeader

* Add components to the GamePage

--- a/frontend/src/css/InGamePage.css
+++ b/frontend/src/css/InGamePage.css
@@ -21,8 +21,8 @@ body, html {
   align-items: stretch;
   justify-content: flex-start;
   padding: 0;
-  /* Remove or change this line /
-  / position: absolute; */
+  /* Remove or change this line */
+  /* position: absolute; */
   position: relative;
   top: 0;
   left: 0;
