--- a/frontend/src/css/ScoreBoard.css
+++ b/frontend/src/css/ScoreBoard.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
-  margin-left: 100px;
-  margin-top: 250px;
+  padding: 0vh 15vw;
+  margin-top: -40px;
 }
 
 .scoreboard-player {
