[FIX] #11 Modified the game mode settings (#27)
* Added more game modes that was planned in the past

* Added single player version and changed the default setting to single player

* corrected the typo for the single player

* Aligned the size of the drop-down menu

--- a/frontend/src/css/Settings.css
+++ b/frontend/src/css/Settings.css
@@ -64,6 +64,7 @@ body, html {
   background-position: right 0.75rem center;
   background-size: 1rem;
   padding-right: 2.5rem;
+  min-width: 12rem;
 }
 
 .setting-dropdown:hover {
