--- a/frontend/src/css/ScoreBoard.css
+++ b/frontend/src/css/ScoreBoard.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
-  padding: 0vh 15vw;
+  padding-left: 2rem;
+  padding-bottom: 5rem;
   margin-top: -40px;
 }
 
