--- a/frontend/src/css/JoinRoom.css
+++ b/frontend/src/css/JoinRoom.css
@@ -1,11 +1,11 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -135,14 +135,13 @@ body, html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-image: url(../assets/Background.png);
-  background-size: cover;
-  background-position: center;
+  background: #40039c;
   color: white;
   padding: 0 1rem;
   font-size: 1rem;
   font-weight: 700;
   letter-spacing: 0.05em;
+  border-radius: 4px;
 }
 
 .guessify-create-button {
@@ -174,7 +173,7 @@ body, html {
   .guessify-input-section {
     flex-direction: row;
   }
-  
+
   .guessify-title {
     font-size: 4.5rem;
   }
