fixed waiting room header to match in game header

--- a/frontend/src/css/InGamePage.css
+++ b/frontend/src/css/InGamePage.css
@@ -21,19 +21,22 @@ html {
   flex-direction: column;
   align-items: stretch;
   justify-content: flex-start;
-  padding: 0;
-  /* Remove or change this line */
-  /* position: absolute; */
+  padding: 0; /* Remove top padding */
   position: relative;
   top: 0;
   left: 0;
   background-image: url(../assets/Background.png);
 }
 
+.game-content {
+  margin-top: 8vh; /* Add gap after header (header is ~10vh + 2vh gap) */
+  flex: 1;
+}
+
 .scoreboard {
-  width: calc(100% - 30vw); /* Account for 15vw padding on both sides */
+  width: calc(100% - 30vw);
   max-width: 800px;
-  margin: 2rem 0 2rem 12vw; /* Left margin matches header left padding */
+  margin: 0 0 2rem 12vw; /* Remove top margin since we're using game-content margin */
 }
 
 .choose-song-container {
